--- a/index.html
+++ b/index.html
@@ -253,10 +253,10 @@
                     <div class="form-group">
                         <label for="service">Servicio</label>
                         <select id="service" required>
-                            <option value="corte">Corte de Pelo</option>
-                            <option value="barba">Arreglo de Barba</option>
-                            <option value="tinte">Tinte</option>
-                            <option value="completo">Completo (Pelo + Barba)</option>
+                            <option value="corte">Corte de Pelo (30 min)</option>
+                            <option value="barba">Arreglo de Barba (15 min)</option>
+                            <option value="tinte">Tinte (15 min)</option>
+                            <option value="completo">Completo (Pelo + Barba) (45 min)</option>
                         </select>
                     </div>
                     <button type="submit" class="btn btn-primary btn-block">CONFIRMAR RESERVA</button>
