--- a/index.html
+++ b/index.html
@@ -23,6 +23,44 @@
 </head>
 
 <body>
+<script>
+document.addEventListener('DOMContentLoaded', () => {
+    const formulario = document.getElementById('bookingForm');
+
+    formulario.addEventListener('submit', async (e) => {
+        e.preventDefault();
+
+        // Extraemos los datos de los campos de tu imagen
+        const datos = {
+            nombre: document.getElementById('name').value,
+            email: document.getElementById('email').value,
+            servicio: document.getElementById('service').value,
+            barbero: document.getElementById('employee').value
+        };
+
+        try {
+            // URL de tu túnel de ngrok
+            const response = await fetch('https://unstormable-trothless-gilberto.ngrok-free.dev', {
+                method: 'POST',
+                headers: {
+                    'Content-Type': 'application/json'
+                },
+                body: JSON.stringify(datos)
+            });
+
+            if (response.ok) {
+                alert('¡Cita enviada correctamente!');
+                formulario.reset(); // Limpia el formulario tras el éxito
+            } else {
+                alert('Error en el servidor de n8n.');
+            }
+        } catch (error) {
+            console.error('Error:', error);
+            alert('Error de conexión. Asegúrate de que ngrok esté abierto.');
+        }
+    });
+});
+</script>
 
     <!-- Preloader -->
     <div id="preloader">
