--- a/index.html
+++ b/index.html
@@ -30,7 +30,6 @@ document.addEventListener('DOMContentLoaded', () => {
     formulario.addEventListener('submit', async (e) => {
         e.preventDefault();
 
-        // Extraemos los datos de los campos de tu imagen
         const datos = {
             nombre: document.getElementById('name').value,
             email: document.getElementById('email').value,
@@ -39,8 +38,8 @@ document.addEventListener('DOMContentLoaded', () => {
         };
 
         try {
-            // URL de tu túnel de ngrok
-            const response = await fetch('https://unstormable-trothless-gilberto.ngrok-free.dev', {
+            // He puesto la URL EXACTA que sale en tu captura de n8n
+            const response = await fetch('https://unstormable-trothless-gilberto.ngrok-free.dev/webhook-test/6ffca2b8-3a7d-487c-b8d4-5f9154d2cb4a', {
                 method: 'POST',
                 headers: {
                     'Content-Type': 'application/json'
@@ -50,18 +49,17 @@ document.addEventListener('DOMContentLoaded', () => {
 
             if (response.ok) {
                 alert('¡Cita enviada correctamente!');
-                formulario.reset(); // Limpia el formulario tras el éxito
+                formulario.reset();
             } else {
-                alert('Error en el servidor de n8n.');
+                alert('Error: n8n recibió la llamada pero algo falló.');
             }
         } catch (error) {
             console.error('Error:', error);
-            alert('Error de conexión. Asegúrate de que ngrok esté abierto.');
+            alert('Error de conexión. Revisa que ngrok esté activo.');
         }
     });
 });
 </script>
-
     <!-- Preloader -->
     <div id="preloader">
         <div class="loader-content">
