--- a/index.html
+++ b/index.html
@@ -186,6 +186,26 @@
         </div>
     </section>
 
+    <!-- Cancellation Section -->
+    <section id="cancellation" class="section cancellation-section">
+        <div class="container">
+            <h2 class="section-title">CANCELAR <span class="gold-text">CITA</span></h2>
+            <div class="booking-container reveal">
+                <p style="text-align: center; color: var(--text-muted); margin-bottom: 20px;">
+                    Introduce tu email para solicitar la cancelación de tu cita.
+                </p>
+                <form id="cancelForm" class="booking-form">
+                    <div class="form-group">
+                        <label>Email</label>
+                        <input type="email" id="cancelEmail" required placeholder="tu@email.com">
+                    </div>
+                    <button type="submit" class="btn btn-primary btn-block"
+                        style="border-color: #e74c3c; color: #e74c3c;">SOLICITAR CANCELACIÓN</button>
+                </form>
+            </div>
+        </div>
+    </section>
+
     <!-- Location / Contact Section -->
     <section id="location" class="section location-section">
         <div class="container">
